@@ -735,6 +735,42 @@ name|ql
 operator|.
 name|io
 operator|.
+name|ContentSummaryInputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|io
+operator|.
+name|HiveInputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|io
+operator|.
 name|HiveSequenceFileOutputFormat
 import|;
 end_import
@@ -1170,6 +1206,20 @@ operator|.
 name|mapred
 operator|.
 name|FileOutputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|InputFormat
 import|;
 end_import
 
@@ -7951,6 +8001,85 @@ operator|==
 literal|null
 condition|)
 block|{
+name|JobConf
+name|jobConf
+init|=
+operator|new
+name|JobConf
+argument_list|(
+name|ctx
+operator|.
+name|getConf
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|PartitionDesc
+name|partDesc
+init|=
+name|work
+operator|.
+name|getPathToPartitionInfo
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|p
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|InputFormat
+argument_list|>
+name|inputFormatCls
+init|=
+name|partDesc
+operator|.
+name|getInputFileFormatClass
+argument_list|()
+decl_stmt|;
+name|InputFormat
+name|inputFormatObj
+init|=
+name|HiveInputFormat
+operator|.
+name|getInputFormatFromCache
+argument_list|(
+name|inputFormatCls
+argument_list|,
+name|jobConf
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|inputFormatObj
+operator|instanceof
+name|ContentSummaryInputFormat
+condition|)
+block|{
+name|cs
+operator|=
+operator|(
+operator|(
+name|ContentSummaryInputFormat
+operator|)
+name|inputFormatObj
+operator|)
+operator|.
+name|getContentSummary
+argument_list|(
+name|p
+argument_list|,
+name|jobConf
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|FileSystem
 name|fs
 init|=
@@ -7973,6 +8102,7 @@ argument_list|(
 name|p
 argument_list|)
 expr_stmt|;
+block|}
 name|ctx
 operator|.
 name|addCS
