@@ -109,6 +109,20 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|ContentSummary
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|FileStatus
 import|;
 end_import
@@ -317,6 +331,8 @@ name|Text
 argument_list|>
 implements|,
 name|JobConfigurable
+implements|,
+name|ContentSummaryInputFormat
 block|{
 comment|/**    * This input split wraps the FileSplit generated from    * TextInputFormat.getSplits(), while setting the original link file path    * as job input path. This is needed because MapOperator relies on the    * job input path to lookup correct child operators. The target data file    * is encapsulated in the wrapped FileSplit.    */
 specifier|public
@@ -979,6 +995,175 @@ throws|throws
 name|IOException
 block|{
 comment|// do nothing
+block|}
+annotation|@
+name|Override
+specifier|public
+name|ContentSummary
+name|getContentSummary
+parameter_list|(
+name|Path
+name|p
+parameter_list|,
+name|JobConf
+name|job
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|//length, file count, directory count
+name|long
+index|[]
+name|summary
+init|=
+block|{
+literal|0
+block|,
+literal|0
+block|,
+literal|0
+block|}
+decl_stmt|;
+name|List
+argument_list|<
+name|Path
+argument_list|>
+name|targetPaths
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Path
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|Path
+argument_list|>
+name|symlinkPaths
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Path
+argument_list|>
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|getTargetPathsFromSymlinksDirs
+argument_list|(
+name|job
+argument_list|,
+operator|new
+name|Path
+index|[]
+block|{
+name|p
+block|}
+argument_list|,
+name|targetPaths
+argument_list|,
+name|symlinkPaths
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Error parsing symlinks from specified job input path."
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+for|for
+control|(
+name|Path
+name|path
+range|:
+name|targetPaths
+control|)
+block|{
+name|FileSystem
+name|fs
+init|=
+name|path
+operator|.
+name|getFileSystem
+argument_list|(
+name|job
+argument_list|)
+decl_stmt|;
+name|ContentSummary
+name|cs
+init|=
+name|fs
+operator|.
+name|getContentSummary
+argument_list|(
+name|path
+argument_list|)
+decl_stmt|;
+name|summary
+index|[
+literal|0
+index|]
+operator|+=
+name|cs
+operator|.
+name|getLength
+argument_list|()
+expr_stmt|;
+name|summary
+index|[
+literal|1
+index|]
+operator|+=
+name|cs
+operator|.
+name|getFileCount
+argument_list|()
+expr_stmt|;
+name|summary
+index|[
+literal|2
+index|]
+operator|+=
+name|cs
+operator|.
+name|getDirectoryCount
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+operator|new
+name|ContentSummary
+argument_list|(
+name|summary
+index|[
+literal|0
+index|]
+argument_list|,
+name|summary
+index|[
+literal|1
+index|]
+argument_list|,
+name|summary
+index|[
+literal|2
+index|]
+argument_list|)
+return|;
 block|}
 block|}
 end_class
