@@ -117,6 +117,20 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|ContentSummary
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|FileSystem
 import|;
 end_import
@@ -417,8 +431,24 @@ throws|throws
 name|IOException
 block|{
 comment|// First data dir, contains 2 files.
-name|writeTextFile
+name|FileSystem
+name|fs
+init|=
+name|dataDir1
+operator|.
+name|getFileSystem
 argument_list|(
+name|job
+argument_list|)
+decl_stmt|;
+name|int
+name|symbolLinkedFileSize
+init|=
+literal|0
+decl_stmt|;
+name|Path
+name|dir1_file1
+init|=
 operator|new
 name|Path
 argument_list|(
@@ -426,14 +456,31 @@ name|dataDir1
 argument_list|,
 literal|"file1"
 argument_list|)
+decl_stmt|;
+name|writeTextFile
+argument_list|(
+name|dir1_file1
 argument_list|,
 literal|"dir1_file1_line1\n"
 operator|+
 literal|"dir1_file1_line2\n"
 argument_list|)
 expr_stmt|;
-name|writeTextFile
+name|symbolLinkedFileSize
+operator|+=
+name|fs
+operator|.
+name|getFileStatus
 argument_list|(
+name|dir1_file1
+argument_list|)
+operator|.
+name|getLen
+argument_list|()
+expr_stmt|;
+name|Path
+name|dir1_file2
+init|=
 operator|new
 name|Path
 argument_list|(
@@ -441,6 +488,10 @@ name|dataDir1
 argument_list|,
 literal|"file2"
 argument_list|)
+decl_stmt|;
+name|writeTextFile
+argument_list|(
+name|dir1_file2
 argument_list|,
 literal|"dir1_file2_line1\n"
 operator|+
@@ -448,8 +499,9 @@ literal|"dir1_file2_line2\n"
 argument_list|)
 expr_stmt|;
 comment|// Second data dir, contains 2 files.
-name|writeTextFile
-argument_list|(
+name|Path
+name|dir2_file1
+init|=
 operator|new
 name|Path
 argument_list|(
@@ -457,14 +509,19 @@ name|dataDir2
 argument_list|,
 literal|"file1"
 argument_list|)
+decl_stmt|;
+name|writeTextFile
+argument_list|(
+name|dir2_file1
 argument_list|,
 literal|"dir2_file1_line1\n"
 operator|+
 literal|"dir2_file1_line2\n"
 argument_list|)
 expr_stmt|;
-name|writeTextFile
-argument_list|(
+name|Path
+name|dir2_file2
+init|=
 operator|new
 name|Path
 argument_list|(
@@ -472,11 +529,27 @@ name|dataDir2
 argument_list|,
 literal|"file2"
 argument_list|)
+decl_stmt|;
+name|writeTextFile
+argument_list|(
+name|dir2_file2
 argument_list|,
 literal|"dir2_file2_line1\n"
 operator|+
 literal|"dir2_file2_line2\n"
 argument_list|)
+expr_stmt|;
+name|symbolLinkedFileSize
+operator|+=
+name|fs
+operator|.
+name|getFileStatus
+argument_list|(
+name|dir2_file2
+argument_list|)
+operator|.
+name|getLen
+argument_list|()
 expr_stmt|;
 comment|// A symlink file, contains first file from first dir and second file from
 comment|// second dir.
@@ -507,6 +580,56 @@ literal|"file2"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|SymlinkTextInputFormat
+name|inputFormat
+init|=
+operator|new
+name|SymlinkTextInputFormat
+argument_list|()
+decl_stmt|;
+comment|//test content summary
+name|ContentSummary
+name|cs
+init|=
+name|inputFormat
+operator|.
+name|getContentSummary
+argument_list|(
+name|symlinkDir
+argument_list|,
+name|job
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|symbolLinkedFileSize
+argument_list|,
+name|cs
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|cs
+operator|.
+name|getFileCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|cs
+operator|.
+name|getDirectoryCount
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|FileInputFormat
 operator|.
 name|setInputPaths
@@ -516,13 +639,6 @@ argument_list|,
 name|symlinkDir
 argument_list|)
 expr_stmt|;
-name|SymlinkTextInputFormat
-name|inputFormat
-init|=
-operator|new
-name|SymlinkTextInputFormat
-argument_list|()
-decl_stmt|;
 name|InputSplit
 index|[]
 name|splits
@@ -708,6 +824,48 @@ operator|new
 name|SymlinkTextInputFormat
 argument_list|()
 decl_stmt|;
+name|ContentSummary
+name|cs
+init|=
+name|inputFormat
+operator|.
+name|getContentSummary
+argument_list|(
+name|symlinkDir
+argument_list|,
+name|job
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|cs
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|cs
+operator|.
+name|getFileCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|cs
+operator|.
+name|getDirectoryCount
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|InputSplit
 index|[]
 name|splits
